1.0.3-dev

	2013-06-05
	Ralf Zimmermann <ralf.zimmermann@tritum.de>
	
	* FIX: #48740: Redirect for ve_guestbook does not work under T3 6.1

1.0.2

	2013-05-28
	Bjoern Jacob <bjoern.jacob@tritum.de>

	* FIX #48591: wt_spamshield BROKEN

1.0.1

	2013-05-28
	Bjoern Jacob <bjoern.jacob@tritum.de>

	* FIX: Missing manual
	
1.0.0

	* Roadmap: http://forge.typo3.org/versions/show/2066

	2013-05-27
	Bjoern Jacob <bjoern.jacob@tritum.de>

	* Release of wt_spamshield 1.0.0
	* UPD: update of manual
	* TASK: set status to stable, code cleanup
	* FIX #48535: t3lib_div::int_from_ver() not existent in T3 6.1

	2013-04-30
	Ralf Zimmermann <ralf.zimmermann@tritum.de>

	* ADD feature #48567: direct_mail_subscription integration
	* ADD feature #33620: Compatibility with new forms extension (core)
	* ADD feature #31932: User readable hint to leave honeypot field empty
	* ADD feature #11224: Explanation/Label for honeypod field
	* TASK: code cleanup, harmonize functions, new folder structure -> ATTENTION: Paths for xclasses have changed!
	* ADD feature #10335: Error messages in locallang.xml
	* FIX: blacklist no reachable

0.9.0

	* Roadmap: http://forge.typo3.org/versions/show/2064

	2012-12-26
	Bjoern Jacob <bjoern.jacob@tritum.de>

	* Release of wt_spamshield 0.9.0
	* ADD Feature #44233: Make Akismet available for powermail 1.x
	* ADD feature #43994: t3_blog integration
	* ADD feature #31962: ke_userregister integration
	* ADD feature #12793: improved http-check
	* FIX #38288: compatibility with TYPO3 4.7
	* FIX #33545: Little error in static/settings/setup.txt
	* FIX #32538: tx_wtspamshield_log.pageid in DB always the same
	* FIX #32079: message definition on wrong template position
	* FIX #7005: superfluous tt_news piVars appended when redirected to "spam recognized page"

For older releases / changes see doc/manual.sxw